2004-09-18  Roland Illig <roland.illig@gmx.de>

	* help.c (search_string): Fixed a warning about a const qualifier.
	A local copy of the string is used for modifying.
	* menu.h: Removed the const qualifier from Menu.name and
	Menu.help_node as they are freed in destroy_menu.
	* menu.c (destroy_menu): Removed the (now unnecessary) casts.
	* popt.h: Removed a const qualifier to avoid compiler warnings.
	* profile.c (get_profile_string): Added const qualifiers to
	avoid compiler warnings. (GetSetProfile): likewise.
	(GetSetProfileChar): likewise.
	* profile.h (get_profile_string): likewise.
	* win.c (check_movement_keys): likewise.
	* win.h (check_movement_keys): likewise.

2004-09-17  Pavel Shirshov  <pavelsh@mail.ru>

	* ext.c (get_file_type_local): Fixes <zombies> in
	QNX 6.x (QNX Neutrino) when guessing file type before
	viewing file.

	Based on patch from Dmitry Alexeyev <dmi_a@qnx.org.ru> 

2004-09-17  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* hotlist.c (add_new_entry_input): Fix warnings.
	* wtools.h (QuickWidget): Make text const.
	* wtools.c (fg_input_dialog_help): Fix warning.

2004-09-14  Leonard den Ottolander  <leonard * den ottolander nl>

	* utilunix.c (tilde_expand): Fix extra slash in result from 
	tilde_expand() for ~<user>/dir.

2004-09-14  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c (get_modifier): Recognize keyboard modifiers on Cygwin.

2004-09-12  Pavel Shirshov  <pavelsh@mail.ru>

	* execute.c (toggle_panels): Fix error. show_output_starts_shell=1
	is not working
	* cmd.c (view_other_cmd): Likewise.

	From Petr Hadraba <hadrabap@volny.cz>

2004-09-10  Jakub Jelinek  <jakub@redhat.com>

	* view.c (get_byte): Fix avoid dying if file is too large 
	to fit into memory.
	(load_view_file): Fix avoid mmaping just part of a >=4GB file 
	on 32-bit arches.
        
	* setup.c (load_keys_from_section): Handle "copy".
	gnome-terminal started using TERM=gnome instead of TERM=xterm,
	so does rxvt etc.
	Instead of making mc.lib really huge and hard to edit